# PFC-whitelist

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
